--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
-  margin:0;
-  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 html {
   font-size: 62.5%;
+}
+* {
+  box-sizing: border-box;
 }
