--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,5 +12,26 @@ html {
 
 * {
   box-sizing: border-box;
-  color: #1d1d1f;
+  color: #4b4b6b;
+}
+
+.slick-prev,
+.slick-next {
+  z-index: 10;
+  color: black;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-size: 40px !important;
+  color: rgba(121, 121, 122, 0.64) !important;
+  display: block !important;
+  z-index: 100 !important;
+  margin-top: 30px !important;
+}
+.slick-prev:before {
+  margin-right: -100px !important;
+}
+.slick-next:before {
+  margin-left: -100px !important;
 }
